# sb-cli

./: .gitignore  .pre-commit-config.yaml  AI_NATIVE_RESEARCH.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  coverage.json  pyproject.toml
.github/workflows/: autobump.yml  ci.yml  release.yml  tag.yml
src/: cli.rs  client.rs  config.rs  error.rs  keychain.rs  lib.rs  main.rs  output.rs  runtime.rs  test_util.rs
src/commands/: auth.rs  completions.rs  config.rs  daily.rs  describe.rs  init.rs  logs.rs  lua.rs  mcp.rs  mod.rs  page.rs  picker.rs  query.rs  schema.rs  screenshot.rs  server.rs  shell.rs  skills.rs  sync.rs  template.rs  upgrade.rs  version.rs
src/sync/: db.rs  mod.rs  progress.rs  puller.rs  pusher.rs  scanner.rs
tests/: cli_auth_test.rs  cli_completions_test.rs  cli_content_dir_routing_test.rs  cli_daily_test.rs  cli_init_test.rs  cli_page_test.rs  cli_runtime_extra_test.rs  cli_runtime_test.rs  cli_server_test.rs  cli_shell_test.rs  cli_smoke.rs  cli_sync_test.rs  cli_xdg_fallback_test.rs  config_test.rs  keychain_test.rs  output_test.rs
